Remove tokens that are "None" type

--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -515,7 +515,10 @@
     "    # Handle emojis and emoticons\n",
     "    emoji_clean_text = [emoji.demojize(token) for token in expanded_text]\n",
     "\n",
-    "    return emoji_clean_text"
+    "    # Remove \"None\" type tokens from the list\n",
+    "    final_text = [token for token in emoji_clean_text if token not None]\n",
+    "\n",
+    "    return final_text"
    ]
   },
   {
