--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "ab5c1712",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "d2915bb2",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "80a62f62",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "fe0755a2",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "\"\\nThis is a dataset scraped from the IMDB movie rating website regarding movies of the 'animation' genre.\\n\\nThis dataset is provided from: https://www.kaggle.com/datasets/rajugc/imdb-movies-dataset-based-on-genre?select=animation.csv \\n\\n\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "0180e40a",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "ab699071",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "ceb86c91",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "5d3b9779",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "88a20c7c",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "f519a8cd",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "9a58114e",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "bca23f11",
    "metadata": {},
    "outputs": [],
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "77403ea0",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_11880\\3642632563.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\ADMIN\\AppData\\Local\\Temp\\ipykernel_6968\\3642632563.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  temp_str = temp_str + str(new_df.iloc[i][j]) + \" \"\n"
      ]
     },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "6592e2d8",
    "metadata": {},
    "outputs": [],
@@ -533,18 +533,17 @@
     "    emoji_clean_text = [emoji.demojize(token) for token in expanded_text]\n",
     "\n",
     "    # Remove \"None\" type tokens from the list\n",
-    "    final_text = [token for token in emoji_clean_text if token not None]\n",
+    "    final_text = [token for token in emoji_clean_text if token != None]\n",
     "\n",
-    "    return final_text"
     "    # Rejoin into a BoW for each token in a movie information\n",
-    "    string_BoW = \" \".join(emoji_clean_text)\n",
+    "    string_BoW = \" \".join(final_text)\n",
     "\n",
     "    return string_BoW"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "564bb856",
    "metadata": {},
    "outputs": [
@@ -560,7 +559,7 @@
       "Florence Pugh \n",
       "\n",
       "After:\n",
-      " 2022 animation adventure comedy pus boot discovers passion adventure taken toll burned eight nine life launch epic journey restore finding mythical last wish joel crawford januel mercado antonio banderas salma hayek harvey guilln florence pugh \n"
+      " 2022 animation adventure comedy pus boot discovers passion adventure taken toll burned eight nine life launch epic journey restore finding mythical last wish joel crawford januel mercado antonio banderas salma hayek harvey guilln florence pugh\n"
      ]
     }
    ],
@@ -574,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "b4ebfd31",
    "metadata": {},
    "outputs": [
@@ -582,7 +581,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Preprocessing BagOfWords: 100%|██████████| 4521/4521 [00:02<00:00, 2204.27it/s]"
+      "Preprocessing BagOfWords: 100%|██████████| 4521/4521 [00:01<00:00, 2367.11it/s]"
      ]
     },
     {
@@ -620,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "48f3d718",
    "metadata": {},
    "outputs": [],
@@ -636,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "d47e1bde",
    "metadata": {},
    "outputs": [
@@ -657,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "a6a19963",
    "metadata": {},
    "outputs": [
@@ -665,7 +664,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2022 animation adventure comedy pus boot discovers passion adventure taken toll burned eight nine life launch epic journey restore finding mythical last wish joel crawford januel mercado antonio banderas salma hayek harvey guilln florence pugh ', '2023 animation adventure comedy story super mario bros journey mushroom kingdom aaron horvath michael jelenic chris pratt anya taylorjoy charlie day jack black ', '2023 animation action adventure upper rank demon assemble infinity castle upper six demon defeat haruo sotozaki zach aguilar kira buckland griffin burn ray chase ']\n"
+      "['2022 animation adventure comedy pus boot discovers passion adventure taken toll burned eight nine life launch epic journey restore finding mythical last wish joel crawford januel mercado antonio banderas salma hayek harvey guilln florence pugh', '2023 animation adventure comedy story super mario bros journey mushroom kingdom aaron horvath michael jelenic chris pratt anya taylorjoy charlie day jack black', '2023 animation action adventure upper rank demon assemble infinity castle upper six demon defeat haruo sotozaki zach aguilar kira buckland griffin burn ray chase']\n"
      ]
     }
    ],
@@ -683,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "016e6b3d",
    "metadata": {},
    "outputs": [
@@ -770,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f2b25de3",
    "metadata": {},
    "outputs": [
@@ -786,7 +785,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Preprocessing Movie Names: 100%|██████████| 4521/4521 [00:00<00:00, 6067.27it/s]"
+      "Preprocessing Movie Names: 100%|██████████| 4521/4521 [00:00<00:00, 6868.98it/s]"
      ]
     },
     {
@@ -799,7 +798,7 @@
       " Puss in Boots: The Last Wish\n",
       "\n",
       "After:\n",
-      " pus boot last wish \n",
+      " pus boot last wish\n",
       "Preprocessed movie names has been converted into a json file\n"
      ]
     },
@@ -857,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "26957135",
    "metadata": {},
    "outputs": [
@@ -867,7 +866,7 @@
        "'\\nSince everything is going smoothly, now the plan is to create a python script with the following features:\\n    --> 1. Ask user to write a sentence about a movie they would like to see\\n    --> 2. Read the sentence into a string\\n    --> 3. Preprocess the string into a BoW\\n    --> 4. Attach the BoW to the array of BoWs that we have saved \\n    --> 5. Perform a cosine similarity calculation of the matrix to find out what index of movies has the highest similarity with the description (Top 5)\\n    --> 6. Extract the top 5 similarity score \\n    --> 6. Extract information of the top 5 movies saved in the pandas Dataframe\\n    --> 7. Display the first movie with all information sided with a confidence score\\n    --> 8. Ask if this is the movie they want\\n    --> 9. If not repeat steps 7 and 8 for the rest of the 4 movies until movies recommendation ran out\\n    --> 10. Loop back to 1.\\n'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
